[package]
name = "sourcepan"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]

[dependencies]
git2 = { git = "https://github.com/bbqsrc/git2-rs", branch = "fix/unneeded-mut" }
chrono = "0.4.5"
preferences = "1.1.0"
notify = "4.0.3"
glib = "0.5.0"
gdk = "0.8.0"

[dependencies.gtk]
version = "0.4.1"
features = ["v3_22"]
